{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 484,
  "lineage": "80a8113d-7a98-029b-326e-0d5f9b3342e3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NatGatewayEIP1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ad6aa89b1c5fa82d",
            "arn": "arn:aws:ec2:us-east-1:733724001336:elastic-ip/eipalloc-0ad6aa89b1c5fa82d",
            "association_id": "eipassoc-0a72b5827448444ee",
            "domain": "vpc",
            "id": "eipalloc-0ad6aa89b1c5fa82d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0501608a34bb846cb",
            "private_dns": "ip-192-168-55-97.ec2.internal",
            "private_ip": "192.168.55.97",
            "public_dns": "ec2-44-209-39-188.compute-1.amazonaws.com",
            "public_ip": "44.209.39.188",
            "public_ipv4_pool": "amazon",
            "tags": {
              "name": "NatGatewayEIP1"
            },
            "tags_all": {
              "name": "NatGatewayEIP1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NatGatewayEIP2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00b6b2207015c9a03",
            "arn": "arn:aws:ec2:us-east-1:733724001336:elastic-ip/eipalloc-00b6b2207015c9a03",
            "association_id": "eipassoc-09ea7c690a10a3096",
            "domain": "vpc",
            "id": "eipalloc-00b6b2207015c9a03",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b38386fa4b8bb547",
            "private_dns": "ip-192-168-98-158.ec2.internal",
            "private_ip": "192.168.98.158",
            "public_dns": "ec2-34-225-219-79.compute-1.amazonaws.com",
            "public_ip": "34.225.219.79",
            "public_ipv4_pool": "amazon",
            "tags": {
              "name": "NatGatewayEIP2"
            },
            "tags_all": {
              "name": "NatGatewayEIP2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "bmt-rat-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:733724001336:internet-gateway/igw-0e31350190cb8bfeb",
            "id": "igw-0e31350190cb8bfeb",
            "owner_id": "733724001336",
            "tags": {
              "Name": "bmt-rat-eks-igw"
            },
            "tags_all": {
              "Name": "bmt-rat-eks-igw"
            },
            "vpc_id": "vpc-09801b59a766972c7"
          },
          "dependencies": [
            "aws_vpc.bmt-rat-eks-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NatGateway01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ad6aa89b1c5fa82d",
            "association_id": "eipassoc-0a72b5827448444ee",
            "connectivity_type": "public",
            "id": "nat-0011293103a60b471",
            "network_interface_id": "eni-0501608a34bb846cb",
            "private_ip": "192.168.55.97",
            "public_ip": "44.209.39.188",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-097f62c40de3233c5",
            "tags": {
              "Name": "NatGateway01"
            },
            "tags_all": {
              "Name": "NatGateway01"
            }
          },
          "dependencies": [
            "aws_eip.NatGatewayEIP1",
            "aws_internet_gateway.bmt-rat-igw",
            "aws_subnet.PublicSubnet01",
            "aws_vpc.bmt-rat-eks-VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NatGateway02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00b6b2207015c9a03",
            "association_id": "eipassoc-09ea7c690a10a3096",
            "connectivity_type": "public",
            "id": "nat-0204505d8ea9f04ad",
            "network_interface_id": "eni-0b38386fa4b8bb547",
            "private_ip": "192.168.98.158",
            "public_ip": "34.225.219.79",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-089bf82ba76f5c5df",
            "tags": {
              "Name": "NatGateway02"
            },
            "tags_all": {
              "Name": "NatGateway02"
            }
          },
          "dependencies": [
            "aws_eip.NatGatewayEIP2",
            "aws_internet_gateway.bmt-rat-igw",
            "aws_subnet.PublicSubnet02",
            "aws_vpc.bmt-rat-eks-VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRouteTable01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:733724001336:route-table/rtb-09d5f1c3fa9ab1dd0",
            "id": "rtb-09d5f1c3fa9ab1dd0",
            "owner_id": "733724001336",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0011293103a60b471",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PrivateRouteTable01"
            },
            "tags_all": {
              "Name": "PrivateRouteTable01"
            },
            "timeouts": null,
            "vpc_id": "vpc-09801b59a766972c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.NatGatewayEIP1",
            "aws_internet_gateway.bmt-rat-igw",
            "aws_nat_gateway.NatGateway01",
            "aws_subnet.PublicSubnet01",
            "aws_vpc.bmt-rat-eks-VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRouteTable02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:733724001336:route-table/rtb-0084a47e4cdc705c1",
            "id": "rtb-0084a47e4cdc705c1",
            "owner_id": "733724001336",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0204505d8ea9f04ad",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PrivateRouteTable02"
            },
            "tags_all": {
              "Name": "PrivateRouteTable02"
            },
            "timeouts": null,
            "vpc_id": "vpc-09801b59a766972c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.NatGatewayEIP2",
            "aws_internet_gateway.bmt-rat-igw",
            "aws_nat_gateway.NatGateway02",
            "aws_subnet.PublicSubnet02",
            "aws_vpc.bmt-rat-eks-VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:733724001336:route-table/rtb-0efdde694bc579053",
            "id": "rtb-0efdde694bc579053",
            "owner_id": "733724001336",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e31350190cb8bfeb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRouteTable"
            },
            "tags_all": {
              "Name": "PublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-09801b59a766972c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.bmt-rat-igw",
            "aws_vpc.bmt-rat-eks-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateRoute-asso-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0734592f3967c5ca1",
            "route_table_id": "rtb-09d5f1c3fa9ab1dd0",
            "subnet_id": "subnet-0df21e86d98723bc7"
          },
          "dependencies": [
            "aws_eip.NatGatewayEIP1",
            "aws_internet_gateway.bmt-rat-igw",
            "aws_nat_gateway.NatGateway01",
            "aws_route_table.PrivateRouteTable01",
            "aws_subnet.PrivateSubnet01",
            "aws_subnet.PublicSubnet01",
            "aws_vpc.bmt-rat-eks-VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateRoute-asso-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9fe8f3d906a43db",
            "route_table_id": "rtb-0084a47e4cdc705c1",
            "subnet_id": "subnet-0978fd09cddac9b93"
          },
          "dependencies": [
            "aws_eip.NatGatewayEIP2",
            "aws_internet_gateway.bmt-rat-igw",
            "aws_nat_gateway.NatGateway02",
            "aws_route_table.PrivateRouteTable02",
            "aws_subnet.PrivateSubnet02",
            "aws_subnet.PublicSubnet02",
            "aws_vpc.bmt-rat-eks-VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public-Route-Asso-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f37608271ff55ff2",
            "route_table_id": "rtb-0efdde694bc579053",
            "subnet_id": "subnet-097f62c40de3233c5"
          },
          "dependencies": [
            "aws_internet_gateway.bmt-rat-igw",
            "aws_route_table.PublicRouteTable",
            "aws_subnet.PublicSubnet01",
            "aws_vpc.bmt-rat-eks-VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public-Route-Asso-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d0a2b8e644f6176",
            "route_table_id": "rtb-0efdde694bc579053",
            "subnet_id": "subnet-089bf82ba76f5c5df"
          },
          "dependencies": [
            "aws_internet_gateway.bmt-rat-igw",
            "aws_route_table.PublicRouteTable",
            "aws_subnet.PublicSubnet02",
            "aws_vpc.bmt-rat-eks-VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ControlPlaneSecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:733724001336:security-group/sg-086f675b0dffe989d",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow to all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-086f675b0dffe989d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "allow",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "ControlPlaneSecurityGroup",
            "name_prefix": "",
            "owner_id": "733724001336",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bmt-rat-eks-ControlPlaneSecurityGroup"
            },
            "tags_all": {
              "Name": "bmt-rat-eks-ControlPlaneSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-09801b59a766972c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.bmt-rat-eks-VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateSubnet01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:733724001336:subnet/subnet-0df21e86d98723bc7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.128.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df21e86d98723bc7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "733724001336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bmt-rat-eks-PrivateSubnet01",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "bmt-rat-eks-PrivateSubnet01",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-09801b59a766972c7"
          },
          "dependencies": [
            "aws_vpc.bmt-rat-eks-VPC",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateSubnet02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:733724001336:subnet/subnet-0978fd09cddac9b93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.192.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0978fd09cddac9b93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "733724001336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bmt-rat-eks-PrivateSubnet02",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "bmt-rat-eks-PrivateSubnet02",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-09801b59a766972c7"
          },
          "dependencies": [
            "aws_vpc.bmt-rat-eks-VPC",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnet01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:733724001336:subnet/subnet-097f62c40de3233c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097f62c40de3233c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "733724001336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bmt-rat-eks-PublicSubnet01",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "bmt-rat-eks-PublicSubnet01",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-09801b59a766972c7"
          },
          "dependencies": [
            "aws_vpc.bmt-rat-eks-VPC",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnet02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:733724001336:subnet/subnet-089bf82ba76f5c5df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089bf82ba76f5c5df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "733724001336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bmt-rat-eks-PublicSubnet02",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "bmt-rat-eks-PublicSubnet02",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-09801b59a766972c7"
          },
          "dependencies": [
            "aws_vpc.bmt-rat-eks-VPC",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "bmt-rat-eks-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:733724001336:vpc/vpc-09801b59a766972c7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0625e24e4371e1584",
            "default_route_table_id": "rtb-0243627578c8c1634",
            "default_security_group_id": "sg-0e9b50ce19fcb979e",
            "dhcp_options_id": "dopt-0518e92e6a1e1cb1d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09801b59a766972c7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0243627578c8c1634",
            "owner_id": "733724001336",
            "tags": {
              "Name": "bmt-rat-eks-VPC"
            },
            "tags_all": {
              "Name": "bmt-rat-eks-VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "outbond_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:733724001336:security-group-rule/sgr-0857637dc035c0498",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "allow to all",
            "from_port": null,
            "id": "sgr-0857637dc035c0498",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-086f675b0dffe989d",
            "security_group_rule_id": "sgr-0857637dc035c0498",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ControlPlaneSecurityGroup",
            "aws_vpc.bmt-rat-eks-VPC"
          ]
        }
      ]
    }
  ]
}